--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       - key: PORT
         value: 8080
       - key: DB_HOST
-        value: localhost
+        value: host.docker.internal
       - key: DB_USER
         value: postgres
       - key: DB_PASSWORD
