--- a/render.yaml
+++ b/render.yaml
@@ -8,13 +8,13 @@ services:
       - key: PORT
         value: "8080"
       - key: DB_HOST
-        value: host.docker.internal
+        value: dpg-d14pkvmmcj7s73fekpm0-a
       - key: DB_USER
-        value: postgres
+        value: book_zm4y_user
       - key: DB_PASSWORD
         value: root
       - key: DB_NAME
-        value: bookstore
+        value: book_zm4y
       - key: DB_PORT
         value: "5432"
       - key: DB_SSLMODE
