--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=8080
-DB_HOST=host.docker.internal
-DB_USER=postgres
-DB_PASSWORD=root
-DB_NAME=bookstore
+DB_HOST=dpg-d14pkvmmcj7s73fekpm0-a
+DB_USER=book_zm4y_user
+DB_PASSWORD=wWpbruwuXbCpCCox6uU5D8u6lWxIw0Fb
+DB_NAME=book_zm4y
 JWT_SECRET=supersecure
 DB_PORT=5432
 DB_SSLMODE=disable
